excess css and hover effect removed, stretched image fixed
nft page's issue fixed

--- a/frontend-hyprclub/src/screens/NFTs/NFTS.module.css
+++ b/frontend-hyprclub/src/screens/NFTs/NFTS.module.css
@@ -78,10 +78,6 @@
     transition: all 100ms ease-in-out;
 }
 
-.bg:hover {
-    transform: translateY(-2px);
-}
-
 
 .preview {
     position: relative;
@@ -205,14 +201,6 @@
     transition: all 100ms ease-in-out;
 }
 
-.Description_Perks::before {
-    content: '';
-}
-
-.Description_Perks:hover {
-    transform: translateY(-2px);
-}
-
 .subHeading {
     font-style: normal;
     font-weight: bold;
@@ -251,7 +239,6 @@
 
 .ul {
     margin: 0;
-    /* padding:0; */
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -264,10 +251,6 @@
     color: inherit;
     margin: 0;
     padding: 0
-}
-
-:global(.dark-mode) .info {
-    color: #FCFCFD;
 }
 
 
@@ -289,9 +272,6 @@
     border-bottom: 2px solid #EFEFEF;
 }
 
-:global(.dark-mode) .bottom {
-    box-shadow: inset 0 0 0 2px #353945;
-}
 
 .bottomHeading {
     font-style: normal;
@@ -465,9 +445,9 @@
     }
 
     .bg {
-        height: 655px;
+        height: 638px;
         margin-bottom: 20px;
-        width: 100%;
+        width: auto;
     }
 
     .preview {
